<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#fff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/title"
        style="@style/text_label"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <TextView
        android:id="@+id/bt_native"
        style="@style/text_button"
        android:text="@string/bt_native"
        />

    <TextView
        android:id="@+id/bt_full_page"
        android:text="@string/bt_full_page"
        style="@style/text_button"
        />

    <TextView
        android:id="@+id/bt_slider"
        android:text="@string/bt_slider"
        style="@style/text_button"
        />

    <TextView
        android:id="@+id/bt_banner"
        android:text="@string/bt_banner"
        style="@style/text_button"
        />



</LinearLayout>